--- a/scss/all.scss
+++ b/scss/all.scss
@@ -813,3 +813,14 @@ html,body{
 .summary a {
     color: blue;
 }
+
+.logo .logo-text {
+    float: left;
+    height: 30px;
+    margin-left: -17px;
+    margin-top: 34px;
+    line-height: 22px;
+    color: #999999;
+    font-size: 12px;
+    width:auto;
+}
